@@ -156,8 +156,8 @@ rectangle covering all inputs</td></tr>
 Rect.clamp(rectstyle) -> Rect
 </tt></font><ul>
 Returns a new rectangle that is moved to be
-completely inside the base rectangle. If the given
-rectangle is too large for the base rectangle in
+completely inside the argument rectangle. If the base
+rectangle is too large for the argument rectangle in
 an axis, it will be centered on that axis.
 </ul><br>&nbsp;<br>
 
@@ -166,8 +166,8 @@ an axis, it will be centered on that axis.
 Rect.clamp_ip(rectstyle) -> None
 </tt></font><ul>
 Moves the Rect to be
-completely inside the base rectangle. If the given
-rectangle is too large for the base rectangle in
+completely inside the argument rectangle. If the given
+rectangle is too large for the argument rectangle in
 an axis, it will be centered on that axis.
 </ul><br>&nbsp;<br>
 
